保留rescore机制